--- a/styles/style.css
+++ b/styles/style.css
@@ -5,6 +5,7 @@
   padding: 0;
   box-sizing: border-box;
   text-decoration: none;
+  font-family: 'Poppins', sans-serif;
 }
 ul,
 li {
@@ -22,22 +23,24 @@ body {
 }
 
 header .header-container {
+  width: 100%;
   display: flex;
   align-items: center;
   justify-content: center;
   flex-wrap: nowrap;
-  gap: 5rem;
+  gap: 6rem;
   margin: 0 auto;
   position: absolute;
-  margin-left: 0 auto;
+  margin: 1rem auto 0;
   left: 0;
   right: 0;
   text-align: center;
+  font-weight: bold;
 }
 
 header .header-container .logo {
-  width: 3rem;
-  transform: scale(3);
+  width: 96px;
+  transform: scale(2);
 }
 
 header .header-container .social {
@@ -50,7 +53,7 @@ header .header-container nav .nav-container {
   justify-content: center;
   flex-direction: row;
   flex-wrap: nowrap;
-  gap: 1rem;
+  gap: 1.5rem;
 }
 
 header .header-container nav .nav-container .nav-item a {
@@ -69,4 +72,39 @@ header .header-container nav .nav-container .nav-item a {
   background-size: cover;
   background-repeat: no-repeat;
   margin: 0 auto;
+}
+
+#main-banner .banner-container .main-container {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  padding-top: 10%;
+  padding-right: 50%;
+  text-align: left;
+}
+
+#main-banner .banner-container .main-container h1 {
+  font-size: 60px;
+  width: 450px;
+  word-break: break-all;
+}
+
+#main-banner .banner-container .main-container span {
+  font-size: 18px;
+}
+
+#main-banner .banner-container .main-container .main-button {
+  margin-top: 100px;
+  border: 2px solid #d07f57;
+  border-radius: 10%;
+  font-size: 20px;
+  word-break: break-all;
+  color: #ffff;
+  background-color: transparent;
+  font-weight: bold;
+  text-transform: uppercase;
+  text-align: left;
+  width: 370px;
+  height: 120px;
+  padding: 20px;
 }
