--- a/styles/style.css
+++ b/styles/style.css
@@ -194,87 +194,31 @@ header .header-container nav .nav-container .nav-item a {
 }
 
 #terapias .terapias-text {
-  padding: 50px;
+  padding: 100px;
   text-align: left;
+  width: 50%;
 }
 #terapias .terapias-text h1 {
   font-size: 40px;
   word-break: break-all;
-  max-width: 250px;
+  max-width: 475px;
 }
 #terapias .terapias-text p {
   font-size: 15px;
-  max-width: 250px;
+  max-width: 450px;
+}
+/*SLIDE*/
+#terapias .swiper-container {
+  max-width: 0px;
 }
 
-.slideshow-container {
-  max-width: 600px;
-  /* position: relative; */
-  margin: auto;
+#terapias .swiper-wrapper {
   display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  max-width: 500px;
 }
 
-/* Hide the images by default */
-.mySlides {
-  /* display: none; */
-  padding: 0px;
-}
-
-/* Next & previous buttons */
-.prev,
-.next {
-  cursor: pointer;
-  /* position: absolute; */
-  /* top: 50%; */
-  width: auto;
-  /* margin-top: -22px; */
-  /* padding: 16px; */
-  color: white;
-  font-weight: bold;
-  font-size: 15px;
-  transition: 0.6s ease;
-  border-radius: 0 3px 3px 0;
-  user-select: none;
-}
-
-/* Position the "next button" to the right */
-.next {
-  right: 0;
-  border-radius: 3px 0 0 3px;
-}
-
-/* Caption text */
-.text {
-  color: #f2f2f2;
-  font-size: 15px;
-  padding: 8px 12px;
-  /* position: absolute; */
-  /* bottom: 8px; */
-  width: 100%;
-  text-align: center;
-  z-index: 99;
-}
-
-/* Number text (1/3 etc) */
-.numbertext {
-  color: #f2f2f2;
-  font-size: 12px;
-  padding: 8px 12px;
-  /* position: absolute; */
-  top: 0;
-}
-
-/* Fading animation */
-.fade {
-  animation-name: fade;
-  animation-duration: 1.5s;
-}
-
-@keyframes fade {
-  from {
-    opacity: 0.4;
-  }
-  to {
-    opacity: 1;
-  }
+#terapias .swiper-wrapper img {
+  width: 350px;
 }
