--- a/styles/style.css
+++ b/styles/style.css
@@ -331,35 +331,52 @@ header .header-container nav .nav-container .nav-item a {
 
 #main-about {
   width: 100vw;
-  height: 200vh;
+  height: 350vh;
   background-image: url('../assets/BANNER-PROFISSIONAIS.png');
   background-repeat: no-repeat;
   background-size: cover;
+  display: flex;
+  flex-direction: column;
 }
 
-#main-about .about-01 {
+#main-about .about-01,
+#main-about .about-02 {
   width: 100vw;
   height: 100vh;
   display: flex;
-  padding: 50px;
+  padding: 100px;
 }
 
 #main-about .about-01 div {
-  width: 50vw;
+  width: 40vw;
   height: 100vh;
+  margin-top: 90px;
 }
 
 #main-about .about-01 div h1 {
-  font-size: 30px;
+  font-size: 40px;
   margin-bottom: 5px;
+  margin-left: 80px;
 }
 
 #main-about .about-01 div p {
-  font-size: 15px;
+  font-size: 16px;
   margin-bottom: 5px;
 }
 
-#maint-about .about-02 {
-  width: 100vw;
+#main-about .about-02 div {
+  width: 50vw;
   height: 100vh;
+  margin-top: 580px;
+  margin-left: 620px;
+}
+
+#main-about .about-02 div h1 {
+  font-size: 40px;
+  margin-bottom: 5px;
+}
+
+#main-about .about-02 div p {
+  font-size: 16px;
+  margin-bottom: 5px;
 }
