--- a/styles/style.css
+++ b/styles/style.css
@@ -11,8 +11,12 @@ ul,
 li {
   list-style: none;
 }
+
+html {
+  scroll-behavior: smooth;
+}
+
 body {
-  font-size: 62.5%;
   list-style-type: none;
   background-color: #0e2440;
   color: #ffff;
@@ -379,4 +383,107 @@ header .header-container nav .nav-container .nav-item a {
 #main-about .about-02 div p {
   font-size: 16px;
   margin-bottom: 5px;
+}
+
+/*DEPOIMENTOS*/
+
+#testimonials {
+  max-height: 100vw;
+  padding: 50px;
+  background-color: #000;
+  border-top: #d07f57 4px solid;
+}
+
+.swiper-wrapper-test {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 10px;
+}
+
+#testimonials h1 {
+  text-align: center;
+  margin-bottom: 30px;
+  color: #d07f57;
+  font-size: 40px;
+}
+
+#testimonials .container {
+  margin-left: 0;
+  margin-right: 0;
+  max-height: 50rem;
+}
+
+#testimonials header {
+  margin-bottom: 0;
+  margin-left: 1.5rem;
+  margin-right: 1.5rem;
+}
+
+#testimonials blockquote {
+  padding: 2rem;
+  box-shadow: 0px 0px 12px rgba(0, 0, 0, 0.08);
+  border-radius: 0.25rem;
+  background-color: #ececec;
+}
+
+#testimonials blockquote h3 {
+  text-align: center;
+  padding: 2rem;
+}
+
+#testimonials blockquote div {
+  position: relative;
+  margin: 0 auto;
+  text-align: center;
+  border-radius: 5%;
+}
+
+/*footer*/
+
+footer {
+  display: flex;
+  width: 100vw;
+  height: 50vh;
+  align-items: center;
+  justify-content: center;
+  padding: 30px;
+  border-top: #d07f57 4px solid;
+  border-bottom: #d07f57 4px solid;
+  gap: 30px;
+}
+
+footer h1 {
+  font-size: 40px;
+}
+
+footer .footer-item {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  max-width: 100%;
+  margin: 0 auto;
+  background-color: #d07f57;
+  height: 200px;
+}
+
+footer .footer-item .footer-item-social {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap: 1rem;
+}
+
+footer .footer-item .footer-item-social a {
+  text-decoration: none;
+  color: #fff;
+}
+
+footer a,
+footer img {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 50%;
 }
