--- a/styles/style.css
+++ b/styles/style.css
@@ -389,8 +389,11 @@ header .header-container nav .nav-container .nav-item a {
 
 #testimonials {
   max-height: 100vw;
-  padding: 50px;
-  background-color: #000;
+  padding: 100px;
+  background-image: url('../assets/BANNER-2.png');
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
   border-top: #d07f57 4px solid;
 }
 
@@ -398,13 +401,13 @@ header .header-container nav .nav-container .nav-item a {
   display: flex;
   align-items: center;
   justify-content: center;
-  gap: 10px;
+  gap: 50px;
 }
 
 #testimonials h1 {
   text-align: center;
   margin-bottom: 30px;
-  color: #d07f57;
+  color: #fff;
   font-size: 40px;
 }
 
@@ -421,10 +424,11 @@ header .header-container nav .nav-container .nav-item a {
 }
 
 #testimonials blockquote {
-  padding: 2rem;
   box-shadow: 0px 0px 12px rgba(0, 0, 0, 0.08);
   border-radius: 0.25rem;
+  background-color: transparent;
   background-color: #ececec;
+  border: 4px solid #d07f57;
 }
 
 #testimonials blockquote h3 {
@@ -447,13 +451,15 @@ footer {
   height: 50vh;
   align-items: center;
   justify-content: center;
-  padding: 30px;
-  border-top: #d07f57 4px solid;
-  border-bottom: #d07f57 4px solid;
-  gap: 30px;
+  padding: 50px;
+  border-top: #fff 4px solid;
 }
 
-footer h1 {
+footer .footer-msg {
+  width: 200px;
+}
+
+footer .footer-msg h1 {
   font-size: 40px;
 }
 
@@ -462,28 +468,23 @@ footer .footer-item {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  max-width: 100%;
+  width: 305px;
   margin: 0 auto;
   background-color: #d07f57;
   height: 200px;
+  border-radius: 28px;
+  border: 4px solid #fff;
+  text-align: center;
 }
 
-footer .footer-item .footer-item-social {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  gap: 1rem;
-}
-
-footer .footer-item .footer-item-social a {
-  text-decoration: none;
+footer .footer-item a {
   color: #fff;
+  text-decoration: none;
 }
 
-footer a,
 footer img {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  width: 50%;
+  width: 25%;
+  color: #fff;
+  -webkit-filter: invert(100%); /* Safari/Chrome */
+  filter: invert(100%);
 }
